log
Fri May  1 11:28:24 PM UTC 2026: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/60
9c513d8
Sat May  2 12:26:33 AM UTC 2026: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:65:12: error: implicit declaration of function ‘lower_than’ [-Wimplicit-function-declaration]
   65 |         if(lower_than(key, aux->pair->key)){
      |            ^~~~~~~~~~
7eb4689
Sat May  2 12:27:22 AM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/60
bef9ca4
